--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -43,7 +43,6 @@
 						<li><a href="{{ path('ressource') }}">Ressources</a></li>
 						<li><a href="{{ path('religion') }}">Religions</a></li>
 						<li><a href="{{ path('religion.level') }}">Fanatisme</a></li>
-						<li><a href="{{ path('personnageSecondaire') }}">Personnage secondaire</a></li>
 						<li><a href="{{ path('statistique') }}">Statistiques</a></li>
 						<li><a href="{{ path('background.list') }}">Backgrounds</a></li>
 					</ul>
@@ -61,6 +60,7 @@
 						<li><a href="{{ path('classe') }}">Classes</a></li>
 						<li><a href="{{ path('age') }}">Ages</a></li>
 						<li><a href="{{ path('genre') }}">Genres</a></li>
+						<li><a href="{{ path('personnageSecondaire') }}">Personnage secondaire</a></li>
 					</ul>
 				</li>
 			{% endif %}
@@ -92,7 +92,8 @@
 						<li><a href="{{ path('classe.list') }}">Les classes</a></li>
 						<li><a href="{{ path('groupeSecondaire.list') }}">Les groupes secondaires</a></li>
 						<li><a href="{{ path('religion.list') }}">Les religions</a></li>
-						<li><a href="{{ path('pnj.inscription') }}">Personnage non-joueur</a></li>
+						<li><a href="{{ path('personnageSecondaire.list') }}">Les personnages secondaires</a></li>
+						
 					</ul
 				</li>
 			{% endif %}
