--- a/src/LarpManager/Views/homepage/index.twig
+++ b/src/LarpManager/Views/homepage/index.twig
@@ -59,10 +59,27 @@
 					{# detail du personnage #}
 					{% if app.user.personnage %}
 						{{ include("homepage/fragment/personnage.twig",{'personnage':app.user.personnage}) }}
+						
+						
 						<div class="panel panel-info">
 							<div class="panel-heading">Personnage secondaire</div>
 							<div class="panel-body">
-								<p>Le personnage secondaire est un archétype que vous pouvez utiliser dans le cas ou votre personnage principale venait à trépasser (ce que nous ne souhaitons pas, mais l'hyborée est un monde violent dans lequel les pires choses sont possibles)</p>
+								<p>Le personnage secondaire est un archétype que vous pouvez utiliser dans le cas 
+								ou <strong>votre personnage principal viendrait à trépasser</strong> (ce que nous ne souhaitons pas, mais l'Hyborée
+								 est un monde violent dans lequel les pires choses sont possibles) ou <strong>si vous souhaitez l'utiliser
+								  dans une instance à la place de l'autre</strong> (plus utile, ou toute autre raison)</p>
+								  
+								{% if app.user.personnageSecondaire %}
+									<h6>Personnage secondaire : 
+										<small>{{ app.user.personnageSecondaire.classe.label }}
+											{{ app.user.personnageSecondaire.competences|join(' / ') }}</small>
+									</h6>
+									<p><a href="{{ path('personnageSecondaire.choice') }}">Modifier son personnage secondaire</a></p>
+								{% else %}
+									<p>Vous n'avez pas encore choisi votre personnage secondaire.</p>
+									<p><a href="{{ path('personnageSecondaire.choice') }}">Choisir son personnage secondaire</a></p>
+								{% endif %}
+
 							</div>
 						</div>
 					{% endif %}
