--- a/src/LarpManager/Views/layout.twig
+++ b/src/LarpManager/Views/layout.twig
@@ -52,6 +52,11 @@
 	         	moment.locale('fr');
 	         </script>
 	         <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+	         <script type="text/javascript">
+		    	$(function () {
+		        	$("[data-toggle='tooltip']").tooltip();
+		    	});
+			</script>
 		{% endblock javascript %}
     </body>
 </html>
