--- a/src/LarpManager/Views/admin/personnage/detail.twig
+++ b/src/LarpManager/Views/admin/personnage/detail.twig
@@ -25,7 +25,7 @@
 			
 	
 	<div class="panel panel-success">
-		<div class="panel-heading">{{ personnage.publicName }} - <small>{{ personnage.classe.label }}</small></div>
+		<div class="panel-heading">{{ personnage.publicName }} - <small>{{ personnage.classeName }}</small></div>
 		<div class="panel-body">
 			<div class="list-group">
 				<div class="list-group-item">
