--- a/src/LarpManager/Views/personnage/detail.twig
+++ b/src/LarpManager/Views/personnage/detail.twig
@@ -11,7 +11,7 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h4 class="list-group-item-heading">
-						{{ personnage.publicName}} - <small>{{ personnage.classe.label }}</small>
+						{{ personnage.publicName}} - <small>{{ personnage.classeName }}</small>
 						<div class="pull-right btn-group" role="group" aria-label="...">
 							<a href="#" class="btn btn-primary" >Imprimer</a>
 						</div>
