--- a/src/LarpManager/Views/forum/fragment/topic_list.twig
+++ b/src/LarpManager/Views/forum/fragment/topic_list.twig
@@ -11,7 +11,11 @@
 							</a>
 						</h5>
 						<p class="list-group-item-text text-default">
-							{{ topic.description|default('pas de description') }}
+							{% if not topic.description %}
+								Pas de description
+							{% else %}
+								{{ topic.description|markdown }}
+							{% endif %}
 						</p>
 						
 						{% if is_granted('ROLE_ORGA', app.user) %}
