--- a/src/LarpManager/Views/competence/list_joueur.twig
+++ b/src/LarpManager/Views/competence/list_joueur.twig
@@ -4,35 +4,26 @@
 
 {% block content %}
 
-	<div class="container-fluid">
-		<ol class="breadcrumb">
-			<li><a href="{{ path('homepage')  }}">Accueil</a></li>
-			<li class="active">Les compétences</li>
-		</ol>
+	<ol class="breadcrumb">
+		<li><a href="{{ path('homepage')  }}">Accueil</a></li>
+		<li class="active">Les compétences</li>
+	</ol>
 		
-		<div class="row">
-		
+	<div class="row">
 		{% for competence in competences %}
-			<div class="col-sm-4 col-md-4 ">
-				<div class="well well-sm">
-				<div class="media">
-		    		<div class="media-left media-top">
-		      			{# Dans le cas ou on associe une image aux compétences
-		      			<a href="#">
-		        			<img class="media-object" src="..." alt="...">
-		      			</a> #}
+			<div class="col-sm-4 col-md-4">
+				<div class="panel panel-default fixed-height">
+					<div class="panel-heading">{{ competence.competenceFamily.label }}</div>
+					<div class="panel-body">
+		      			<blockquote>
+		      				<p>{{ competence.competenceFamily.description|markdown }}</p>
+		      			</blockquote>
+		      			<h6>{{competence.level.label }}</h6>
+		      			<p>{{ competence.description|markdown }}</p>
 		    		</div>
-		    		<div class="media-body">
-		      			<h4 class="media-heading">{{ competence.competenceFamily.label }}</h4>
-		      			<p>{{ competence.competenceFamily.description|markdown }}</p>
-		      			<p><strong>{{competence.level.label }}</strong> : {{ competence.description|markdown }}</p>
-		    		</div>
-		  		</div>
 		  		</div>
 		  	</div>
 		{% endfor %}
-		
-		</div>
 	</div>
 
 {% endblock content %}
