Afficher correctement le dernier post d'un topic. mettre le contenu du post dans la notification mail.

--- a/src/LarpManager/Views/forum/fragment/post.twig
+++ b/src/LarpManager/Views/forum/fragment/post.twig
@@ -7,156 +7,14 @@
 	
 	<ul class="list-group forum">
 		<li class="list-group-item">	
-			<div class="row">
-				<div class="col-xs-3 col-md-3">
-				{# auteur #}
-					<div>
-						{% if is_granted('ROLE_MODERATOR', app.user) %}
-							<a href="{{ path('user.view',{'id': post.user.id}) }}">{{ post.user.username }}</a>
-						{% else %}
-							{{ post.user.username }}
-						{% endif %}
-					</div>
-					
-					<div>
-						{% if post.user.hasRole('ROLE_ADMIN') %}
-							Admin
-						{% elseif post.user.hasRole('ROLE_SCENARISTE') %}
-							Scénariste
-						{% elseif post.user.hasRole('ROLE_ORGA') %}
-							Orga
-						{% elseif post.user.hasRole('ROLE_USER') %}
-							Joueur
-						{% endif %}
-					</div>
-						
-					{% if post.user.personnage %}
-					{% set perso = p.user.personnage %}
-						<div>{{ perso.nom }}, {{ perso.surnom }}</div>
-						<div>{{ perso.groupe.nom }}</div>
-						<div>
-							{% if perso.genre.label == 'Masculin' %}
-								{{ perso.classe.labelMasculin }}
-							{% else %}
-								{{ perso.classe.labelFeminin }}
-							{% endif %}
-						</div>
-					{% endif %}
-				</div>
-				<div class="col-xs-5 col-md-5">
-					
-					
-					{# metadata #}
-					{% if post.creationDate != post.updateDate %}
-						<p>Mis à jour {{ post.updateDate|time_diff() }}</p>
-					{% endif %}
-					
-					{# texte #}
-					<p class="list-group-item-text">{{ post.text|markdown }}</p>
-				</div>
-					
-					<div class="col-xs-4 col-md-4">
-						<div class="pull-right">
-													 
-							{% if is_granted('POST_OWNER', post.id) %}
-								<a 	title="Editer"
-									data-toggle="tooltip" 
-									data-placement="left" 
-									class="btn btn-primary" 
-									href="{{ path('forum.post.update',{'index':post.id}) }}">
-									<i class="fa fa-pencil"></i>
-								</a>
-							{% endif %}
-							 
-							<br />
-							<p>
-								Créé {{ post.creationDate|time_diff() }}
-							{% if post.creationDate != post.updateDate %}
-								<br />Modifié {{ post.updateDate|time_diff() }}
-							{% endif %}
-							
-								<br />{{ post.views }} Vues.
-							</p>
-						</div>
-					</div>
-				</div>
+			{{ include("forum/fragment/post_row.twig", {'post' : post}) }}
 			</li>
 			
 		
 			{# liste des réponses #}
 			{% for p in post.posts %}
 			<li class="list-group-item"  id="post_{{ p.id }}">
-				<div class="row">
-					<div class="col-xs-3 col-md-3">
-						<div style="background-color:#eee;padding-left:5px;">
-							{# auteur #}
-							<div>
-								{% if is_granted('ROLE_MODERATOR', app.user) %}
-									<a href="{{ path('user.view',{'id': p.user.id}) }}">{{ p.user.username }}</a>
-								{% else %}
-									{{ p.user.username }}
-								{% endif %}
-							</div>
-	
-							<div>
-								{% if p.user.hasRole('ROLE_ADMIN') %}
-									Admin
-								{% elseif p.user.hasRole('ROLE_SCENARISTE') %}
-									Scénariste
-								{% elseif p.user.hasRole('ROLE_ORGA') %}
-									Orga
-								{% elseif p.user.hasRole('ROLE_USER') %}
-									Joueur
-								{% endif %}
-							</div>
-								
-							{% if p.user.personnage %}
-							{% set perso = p.user.personnage %}
-								<div>{{ perso.nom }}, {{ perso.surnom }}</div>
-								<div>{{ perso.groupe.nom }}</div>
-								<div>
-									{% if perso.genre.label == 'Masculin' %}
-										{{ perso.classe.labelMasculin }}
-									{% else %}
-										{{ perso.classe.labelFeminin }}
-									{% endif %}
-								</div>
-							{% endif %}
-						</div>
-						
-					</div>
-					<div class="col-xs-5 col-md-5">
-						{% if not p.creationDate == p.updateDate %}
-							<p>Mis à jour le {{ p.updateDate|time_diff() }}</p>
-						{% endif %}
-						<p class="list-group-item-text">{{ p.text|markdown }}</p>
-					</div>
-					
-					<div class="col-xs-4 col-md-4">
-						<div class="pull-right">
-							{% if is_granted('POST_OWNER', p.id) %}
-								<a 	title="Editer"
-									data-toggle="tooltip" 
-									data-placement="left" 
-									class="btn btn-primary" 
-									href="{{ path('forum.post.update',{'index':p.id}) }}">
-									<i class="fa fa-pencil"></i>
-								</a>
-							{% endif %}
-							
-							{% if is_granted('ROLE_MODERATOR', app.user) %}<a href="{{ path('forum.post.delete', {'index': post.id}) }}" href="">Supprimer</a>{% endif %}
-							<br />
-							<p>
-								Créé {{ p.creationDate|time_diff() }}
-							{% if post.creationDate|date('Y-m-d') != p.updateDate|date('Y-m-d') %}
-								<br />Modifié {{ p.updateDate|time_diff() }}
-							{% endif %}
-							
-								<br />{{ p.views }} Vues.
-							</p>
-						</div>
-					</div>
-				</div>
+				{{ include("forum/fragment/post_row.twig", {'post' : p}) }}
 			</li>
 			{%  endfor %}
 		</ul>
