--- a/src/LarpManager/Views/user/email/notification.twig
+++ b/src/LarpManager/Views/user/email/notification.twig
@@ -7,13 +7,17 @@ Variables passed to this template:
 
 {# The subject line. #}
 {%- block subject -%}{%- autoescape false -%}
-    Une réponse sur un sujet que vous surveillez a été faite.
+    {{ post.title }} -- Nouvelle réponse.
 {%- endautoescape -%}{%- endblock -%}
 
 {# The plain text message. #}
 {%- block body_text -%}{%- autoescape false -%}
 
 Une réponse sur un sujet que vous surveillez a été faite.
+
+{{ post.title }}
+
+{{ post.text }}
 
 Cliquez sur le lien ci-dessous pour accéder directement au forum :
 {{ postUrl }}
@@ -23,7 +27,11 @@ Cliquez sur le lien ci-dessous pour accéder directement au forum :
 {# The HTML message. Optional. #}
 {%- block body_html -%}
 
-    <h1>Une réponse sur un sujet que vous surveillez a été faite</h1>
+    <h3>Une réponse sur un sujet que vous surveillez a été faite</h3>
+    
+    <h5>{{ post.title }}</h5>
+
+	<p>{{ post.text|markdown }}</p>
 
     <p>
         <a href="{{ postUrl }}"> Suivez ce lien pour accéder directement au forum</a>.
