--- a/src/LarpManager/Views/user/email/notification.twig
+++ b/src/LarpManager/Views/user/email/notification.twig
@@ -29,7 +29,7 @@ Cliquez sur le lien ci-dessous pour accéder directement au forum :
 
     <h3>Une réponse sur un sujet que vous surveillez a été faite</h3>
     
-    <h5>{{ post.title }}</h5>
+    <h5>{{ post.title }} -- par {{ post.user.username }}</h5>
 
 	<p>{{ post.text|markdown }}</p>
 
